--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@vitejs/plugin-react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.9.0",
-    "vite": "^4.2.0",
-    "@vitejs/plugin-react": "^3.1.0"
+    "vite": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.8",
